--- a/docs/providers/Guides/Freestyle.mdx
+++ b/docs/providers/Guides/Freestyle.mdx
@@ -4,7 +4,7 @@ import { CodeBlock } from "@theme/codeblock";
 # Freestyle
 
 :::note
-Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account.
+Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account (See [here](#vital-freestyle-supported-regions) for a breakdown or vital regions and supported Freestyle regions).
 
 Vital has two practices (depending on environment):
 
@@ -47,13 +47,14 @@ To connect your user to Vital via the Widget you can follow the guide [here](../
 
 Note, Freestyle Libre is available in different regions, ensure you select the correct region in the list of options above. Here are the regions that are available for Freestyle in each Vital region:
 
+<a name="vital-freestyle-supported-regions"></a>
 
 | Vial Region          | Freestyle Region        |
 | -------------------- | ----------------------- |
 | United States (`us`) | United States (`us`) *  |
 | Europe (`eu`)        | Europe (`eu`) *         |
 |                      | Singapore (`sg`)        |
-| _ (*) Default Freestyle region if unspecified_ |
+| _(*) Default Freestyle region if unspecified_ |
 
 
 ## Vital Link
