google fit out of beta, plus a note on fetched activity data

--- a/docs/providers/Introduction.mdx
+++ b/docs/providers/Introduction.mdx
@@ -11,6 +11,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Freestyle](https://www.freestylelibre.co.uk/libre/) | `freestyle_libre` | Abbott CGM Glucose monitor                                    |
 | [Fitbit](https://www.fitbit.com/global/uk/home)      | `fitbit`          | Activity Trackers (all devices)                               |
 | [Garmin](https://www.garmin.com)                     | `garmin`          | Fitness watches (all devices)                                 |
+| [Google Fit](https://www.google.com/fit/)            | `google_fit`      | Activity Trackers (all devices)                               |
 | [Oura](https://ouraring.com)                         | `oura`            | Smart Sleep tracking ring                                     |
 | [Peloton](https://www.onepeloton.com)                | `peloton`         | Popular Indoor Exercise bike                                  |
 | [Renpho](https://renpho.com)                         | `renpho`          | Fitness Scales                                                |
@@ -35,7 +36,6 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch | Beta    |
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK       | Beta    |
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                           | Beta    |
-| [Google Fit](https://www.google.com/fit/)                            | `google_fit`          | Activity Trackers (all devices)                   | Beta    |
 | [Suunto](https://www.suunto.com)                                     | TBD                   | Fitness Watch                                     | Planned |
 | [Dexcom](https://www.dexcom.com)                                     | TBD                   | Continuous glucose monitor                        | Planned |
 | [iGlucose](https://smartmeterrpm.com/iglucose/)                      | TBD                   | Glucose Strips                                    | Planned |
@@ -63,6 +63,7 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Freestyle](https://www.freestylelibre.co.uk/libre/) | Live Refresh |
 | [Fitbit](https://www.fitbit.com/global/uk/home)      | Webhooks     |
 | [Garmin](https://www.garmin.com)                     | Webhooks     |
+| [Google Fit](https://www.google.com/fit/)            | Live Refresh |
 | [Oura](https://ouraring.com)                         | Live Refresh |
 | [Peloton](https://www.onepeloton.com)                | Live Refresh |
 | [Renpho](https://renpho.com)                         | Live Refresh |
