google fit out of beta, plus a note on fetched activity data

--- a/docs/providers/Providers Guides/google_fit.mdx
+++ b/docs/providers/Providers Guides/google_fit.mdx
@@ -2,7 +2,7 @@
 
 ## Data accuracy
 
-Activity data fetched from Google Fit might be slightly different than the readings in the Google Fit app. Calories data is very accurate - the biggest difference we've seen is around 3-4kcal. Step count data can be more off - the biggest difference we observed is around 250-300 steps over a total count of ~10k.
+Activity data fetched from Google Fit might be slightly different than the readings in the Google Fit app. Calories data is very accurate - the biggest difference we've seen is around 3-4kcal over a total of ~2k. Step count data can be more off - the biggest difference we observed is around 250-300 steps over a total count of ~10k.
 
 This can happen for a variety of reasons:
 
