fix broken links

--- a/docs/vital-link/launching_link.mdx
+++ b/docs/vital-link/launching_link.mdx
@@ -47,7 +47,7 @@ curl --request POST \
 <br />
 
 2. Use the link token to [launch the link
-   widget](https://vital-docs.readme.io/docs/vital-link-1#vital-link-flow) on your
+   widget](/vital-link/link_flow) on your
    frontend. This will launch link widget straight into the login flow for the
    provider.
 
