--- a/docs/vital-link/link_flow.mdx
+++ b/docs/vital-link/link_flow.mdx
@@ -17,7 +17,7 @@ import {
 The link flow starts when a user wants to connect a wearable device with Vital. An overview of the process can be found below.
 To start integrating Vital Link make sure you have your `api_key` from your team [dashboard](https://app.tryvital.io).
 
-Before initialising the link flow, ensure you have generated a `user_id` for the specific user. This should be done when a user signs up to your service and is to be stored alongside your user entry in your database. [See](https://vital-docs.readme.io/docs/creating-your-first-user) for more details on how to create a `user_id`.
+Before initialising the link flow, ensure you have generated a `user_id` for the specific user. This should be done when a user signs up to your service and is to be stored alongside your user entry in your database. [See](/welcome/quickstart#3-creating-your-first-user) for more details on how to create a `user_id`.
 
 <HStack alignItems={"flex-start"} overflow={"hidden"}>
   <VStack
