Fix issues with broken links

--- a/docs/api/errors.mdx
+++ b/docs/api/errors.mdx
@@ -6,9 +6,9 @@ import { ParamTable } from "@theme/param";
 
 # Errors
 
-| Errors overview |                                                                     |                                                              |
-| --------------- | ------------------------------------------------------------------- | ------------------------------------------------------------ |
-| Link Errors     | Errors that occur during the [Link](/vital-link/link_flow) process. | LINK_TOKEN_MISSING, INVALID_EMAIL_CREDENTIALS, INVALID_TOKEN |
+| Errors overview |                                                                               |                                                              |
+| --------------- | ----------------------------------------------------------------------------- | ------------------------------------------------------------ |
+| Link Errors     | Errors that occur during the [Link](/wearables/vital-link/link_flow) process. | LINK_TOKEN_MISSING, INVALID_EMAIL_CREDENTIALS, INVALID_TOKEN |
 
 ### Error Schema
 
