--- a/docs/providers/Providers Guides/freestyle.mdx
+++ b/docs/providers/Providers Guides/freestyle.mdx
@@ -37,7 +37,7 @@ either via the **widget** or the **API**.
 
 ## Vital Widget
 
-To connect your user to Vital via the Widget you can follow the guide [here](../../vital-link/launching_link).
+To connect your user to Vital via the Widget you can follow the guide [here](/wearables/vital-link/launching_link).
 
 <br />
 
@@ -73,7 +73,7 @@ const { link_token } = await client.Link.create(userId);
 </CodeBlock>
 <br />
 
-2. Libre is an [_email_](../../vital-link/customization#email) provider.
+2. Libre is an [_email_](/wearables/vital-link/customization#email) provider.
    This means that when connecting a user we have to use
    the connect email provider method, passing in the email of the user's Libre account and region in short form.
    <br />
