--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -152,7 +152,7 @@ You can now make API calls to retrieve data for that Source.
 ### How it works
 
 As you might have noticed, you use both a server and a client-side component to access the Vital APIs.
-A more detailed explanation on how linking works can be found [here](/vital-link/link_flow)
+A more detailed explanation on how linking works can be found [here](/wearables/vital-link/link_flow)
 
 The first step is to create a new `link_token` by making a `/link/token` request and passing in the
 required configuration. This `link_token` is a short lived, one-time use token that authenticates your
@@ -320,6 +320,6 @@ Congratulations, you have completed the Vital Quickstart!
 
 There are a few directions you can go in now:
 
-- [Vital Link](/vital-link/introduction)
-- [Vital SDKs](/sdks/ios)
+- [Vital Link](/wearables/vital-link/introduction)
+- [Vital SDKs](/wearables/sdks/ios)
 - [Vital Webhooks](/webhooks/Introduction)
