--- a/wearables/providers/Guides/Freestyle.mdx
+++ b/wearables/providers/Guides/Freestyle.mdx
@@ -101,4 +101,4 @@ await client.Link.connectEmailProvider(
 
 <br />
 
-Once this is complete we will start syncing data from their [Libre account](../../api/data_flow).
+Once this is complete we will start syncing data from their [Libre account](/api/data_flow).
