--- a/wearables/vital-link/launching_link.mdx
+++ b/wearables/vital-link/launching_link.mdx
@@ -47,7 +47,7 @@ curl --request POST \
 <br />
 
 2. Use the link token to [launch the link
-   widget](/vital-link/link_flow) on your
+   widget](/wearables/vital-link/link_flow) on your
    frontend. This will launch link widget straight into the login flow for the
    provider.
 
