--- a/lab-testing/overview/Testing Modalities.mdx
+++ b/lab-testing/overview/Testing Modalities.mdx
@@ -7,15 +7,14 @@ Three types are currently supported:
 
 - At home test kit
 - At home phlebotomy visit
-- In lab phlebotmy visit
+- In lab phlebotomy visit
 
 ### At-home test kits
 
 This involves sending a kit to a patients home that allows the patient to collect their
 sample specimen and send back to our lab networks in the mail.
 
-At home testing kits are kits are typically comprised of a number of
-components such as:
+At home testing kits are comprised of a number of components such as:
 
 <HStack>
   <Box>
@@ -42,10 +41,8 @@ components such as:
 ### In lab phlebotomy
 
 In lab draws involve the patient going to a lab location either Quest or Labcorp, to carry out the test.
-The requisition forms required to carry out this test can be generated using Vital's API, once a patient has
-met certain conditions. Results can then be retrieved through Vital's API.
+To carry out this test you need a requisition form. Vital's API can generate this for you, if the patient mets certain conditions. Results are then retrieved via Vital's API.
 
 ### At-home phlebotomy
 
-At-home phlebotomy involves mobile phlebotmists visiting a patient at their home and carrying out the phlebotomy draw.
-The sample is then delivered directly to the lab by the phlebotomist.
+At-home phlebotomy requires mobile phlebotmists visiting a patient at their home and carrying out the phlebotomy draw. The sample is then delivered to the lab by the phlebotomist.
