--- a/lab-testing/overview/Testing Modalities.mdx
+++ b/lab-testing/overview/Testing Modalities.mdx
@@ -41,7 +41,7 @@ At home testing kits are comprised of a number of components such as:
 ### In lab phlebotomy
 
 In lab draws involve the patient going to a lab location either Quest or Labcorp, to carry out the test.
-To carry out this test you need a requisition form. Vital's API can generate this for you, if the patient mets certain conditions. Results are then retrieved via Vital's API.
+To carry out this test you need a requisition form. Vital's API can generate this for you, if the patient meets certain conditions. Results are then retrieved via Vital's API.
 
 ### At-home phlebotomy
 
