--- a/api-reference/labsv2/orders/index.mdx
+++ b/api-reference/labsv2/orders/index.mdx
@@ -2,7 +2,7 @@ import { Swagger } from "@theme/swagger";
 
 # Overview
 
-## Create Orders
+## Create Order
 
 <Swagger version={'v3'} endpoint={"/order"} method={"post"} title={"Create order"}>
 
@@ -11,9 +11,73 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Testkits.order(
+data = client.Order.order(
     user_id=*,
-    testkit_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
+    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
+    patient_details={
+        "dob": "2020-01-01",
+        "gender": "female"
+    },
+    patient_address={
+            "receiver_name": "john Doe",
+            "street": "606 Capp st.",
+            "street_number": "Apt 14",
+            "city": "San Francisco",
+            "state": "CA",
+            "zip": "94107",
+            "country": "US",
+            "phone_number": "+181808433"
+            },
+    }
+)
+```
+
+</Swagger>
+
+## Get order
+
+<Swagger version={'v3'} endpoint={"/order/{order_id}"} method={"get"} title={"Get order"}>
+
+```python
+from vital import Client
+
+client = Client(api_key, "sandbox")
+
+data = client.Order.order(
+    user_id=*,
+    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
+    patient_details={
+        "dob": "2020-01-01",
+        "gender": "female"
+    },
+    patient_address={
+            "receiver_name": "john Doe",
+            "street": "606 Capp st.",
+            "street_number": "Apt 14",
+            "city": "San Francisco",
+            "state": "CA",
+            "zip": "94107",
+            "country": "US",
+            "phone_number": "+181808433"
+            },
+    }
+)
+```
+
+</Swagger>
+
+## Cancel order
+
+<Swagger version={'v3'} endpoint={"/order/{order_id}/cancel"} method={"post"} title={"Get order"}>
+
+```python
+from vital import Client
+
+client = Client(api_key, "sandbox")
+
+data = client.Order.order(
+    user_id=*,
+    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
     patient_details={
         "dob": "2020-01-01",
         "gender": "female"
