--- a/lab-testing/workflow/Ordering Tests.mdx
+++ b/lab-testing/workflow/Ordering Tests.mdx
@@ -84,10 +84,13 @@ This will return a list of all the available tests to you. They include a descri
             "name": "Thyroid Stimulating Hormone",
             "slug": "tsh",
             "description": "",
+            "min_value": 100,
+            "max_value": 200,
+            "unit": "fg/L"
         }
     ],
     }
-  ]`}
+]`}
 />
 
 <br />
