--- a/api-reference/labsv2/orders/index.mdx
+++ b/api-reference/labsv2/orders/index.mdx
@@ -43,25 +43,8 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Order.order(
-    user_id=*,
-    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
-    patient_details={
-        "dob": "2020-01-01",
-        "gender": "female"
-    },
-    patient_address={
-            "receiver_name": "john Doe",
-            "street": "606 Capp st.",
-            "street_number": "Apt 14",
-            "city": "San Francisco",
-            "state": "CA",
-            "zip": "94107",
-            "country": "US",
-            "phone_number": "+181808433"
-            },
-    }
-)
+data = client.Order.get("<order_id>")
+
 ```
 
 </Swagger>
@@ -75,25 +58,8 @@ from vital import Client
 
 client = Client(api_key, "sandbox")
 
-data = client.Order.order(
-    user_id=*,
-    lab_test_id="5b41f610-ebc5-4803-8f0c-a61c3bdc7faf",
-    patient_details={
-        "dob": "2020-01-01",
-        "gender": "female"
-    },
-    patient_address={
-            "receiver_name": "john Doe",
-            "street": "606 Capp st.",
-            "street_number": "Apt 14",
-            "city": "San Francisco",
-            "state": "CA",
-            "zip": "94107",
-            "country": "US",
-            "phone_number": "+181808433"
-            },
-    }
-)
+data = client.Order.cancel("<order_id>")
+
 ```
 
 </Swagger>
