--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -36,8 +36,8 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `apple_health_kit`    | Health and fitness data on iPhone and Apple Watch | Beta    |
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK       | Beta    |
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                           | Beta    |
+| [Dexcom](https://www.dexcom.com)                                     | `dexcom`              | Continuous glucose monitor                        | Beta    |
 | [Suunto](https://www.suunto.com)                                     | TBD                   | Fitness Watch                                     | Planned |
-| [Dexcom](https://www.dexcom.com)                                     | TBD                   | Continuous glucose monitor                        | Planned |
 | [iGlucose](https://smartmeterrpm.com/iglucose/)                      | TBD                   | Glucose Strips                                    | Planned |
 | [Polar](https://www.polar.com)                                       | TBD                   | Activity Watch                                    | Planned |
 | [KetoMojo](https://keto-mojo.com)                                    | TBD                   | Glucose, Ketones and more                         | Planned |
