--- a/wearables/providers/Introduction.mdx
+++ b/wearables/providers/Introduction.mdx
@@ -56,7 +56,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ## Data Frequency
 
-This section describes how we fetch data from the different providers. For all of them, we send you webhook updates when new data is available. The differences are in the frequency with which we fetch the latest data.
+This section describes how we fetch data from the different providers. For all of them, we send you webhook updates when new data is available. The difference is how frequently we fetch data.
 
 Whenever possible, we set up our integrations so that we are immediately notified when new data is available. These are the providers marked as `Webhook` in the table below. For these providers, we fetch the latest data as soon as it is available and we send a webhook update.
 
