--- a/wearables/sdks/iOS.mdx
+++ b/wearables/sdks/iOS.mdx
@@ -203,7 +203,7 @@ After having the `url`, you can open it with `SFSafariViewController` or `WKWebV
 
 ## 5. VitalDevices
 
-### 1. Blueetooth
+### 1. Bluetooth
 
 VitalDevices connects your app to other devices via bluetooth. Currently we support glucose meters and blood pressure readers.
 
